Add gunicorn timeout option

--- a/docker/alpine/Dockerfile
+++ b/docker/alpine/Dockerfile
@@ -2,7 +2,8 @@ FROM python:3.5-alpine
 
 ARG HATSTALL_VERSION
 
-ENV HATSTALL_WORKERS=2
+ENV HATSTALL_GUNICORN_WORKERS=2
+ENV HATSTALL_GUNICORN_TIMEOUT=90
 
 EXPOSE 8001
 
