--- a/docker/alpine/Makefile
+++ b/docker/alpine/Makefile
@@ -4,5 +4,8 @@ IMAGE='olblak/hatstall'
 build:
 	docker build -t $(IMAGE):$(VERSION) -f Dockerfile ../..
 
+publish:
+	docker push $(IMAGE):$(VERSION)
+
 run:
 	docker run -i -t --rm $(IMAGE):$(VERSION)
