Refactor docker image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,12 +4,22 @@
 FROM debian:stretch-slim
 MAINTAINER Alvaro del Castillo <acs@bitergia.com>
 
-ENV DEBIAN_FRONTEND noninteractive
-ENV DEPLOY_USER grimoirelab
-ENV DEPLOY_USER_DIR /home/${DEPLOY_USER}
+ARG HATSTALL_VERSION
 
-# Initial user
-RUN useradd ${DEPLOY_USER} --create-home --shell /bin/bash
+EXPOSE 80
+
+ENV DEBIAN_FRONTEND noninteractive
+ENV DEPLOY_USER www-data
+ENV DEPLOY_USER_DIR /var/www
+
+ENV HATSTALL_ADMIN_USER admin
+ENV HATSTALL_ADMIN_MAIL admin@example.com
+ENV HATSTALL_ADMIN_PASS admin
+ENV HATSTALL_ALLOWED_HOST '[]'
+ENV HATSTALL_DATABASE /var/www/hatstall.sqlite3
+ENV HATSTALL_DEBUG False
+
+ADD https://github.com/krallin/tini/releases/download/v0.18.0/tini /sbin/tini
 
 # install dependencies
 RUN apt-get update && \
@@ -26,31 +36,41 @@ RUN apt-get update && \
         apache2 libapache2-mod-wsgi-py3 ssl-cert \
         && \
     apt-get clean && \
-    find /var/lib/apt/lists -type f -delete
-
-RUN echo "${DEPLOY_USER} ALL=NOPASSWD: ALL" >> /etc/sudoers
-
-RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && \
-    echo 'LANG="en_US.UTF-8"'>/etc/default/locale && \
-    dpkg-reconfigure --frontend=noninteractive locales && \
-    update-locale LANG=en_US.UTF-8
+    find /var/lib/apt/lists -type f -delete && \
+    chmod 0755 /sbin/tini
 
 ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US:en
+ENV LANGUAGE en_US.UTF-8
 ENV LC_ALL en_US.UTF-8
-ENV LANG C.UTF-8
+
+RUN \
+  sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && \
+  echo 'LANG="en_US.UTF-8"'>/etc/default/locale && \
+  dpkg-reconfigure --frontend=noninteractive locales && \
+  update-locale LANG=en_US.UTF-8
 
 # Install pip packages needed
-RUN pip3 install django
-RUN pip3 install python-dateutil
-RUN pip3 install pandas==0.18.1
-RUN pip3 install setuptools
-RUN pip3 install sortinghat
+RUN \
+  pip3 install --no-cache-dir django wheel && \
+  pip3 install --no-cache-dir python-dateutil && \
+  pip3 install --no-cache-dir pandas==0.18.1 && \
+  pip3 install --no-cache-dir setuptools && \
+  pip3 install --no-cache-dir sortinghat
 
-ADD stage ${DEPLOY_USER_DIR}/stage
-RUN chmod 755 ${DEPLOY_USER_DIR}/stage
+COPY django-hatstall ${DEPLOY_USER_DIR}/django-hatstall
 
-USER ${DEPLOY_USER}
+COPY docker/apache-hatstall.conf /etc/apache2/sites-available/000-default.conf
+COPY docker/apache-hatstall.conf /etc/apache2/sites-enabled/000-default.conf
+
+#RUN a2enmod ssl
+
+ADD docker/stage /entrypoint
+RUN chmod 755 /entrypoint
+
 WORKDIR ${DEPLOY_USER_DIR}
 
-CMD ${DEPLOY_USER_DIR}/stage
+ENTRYPOINT [\
+  "/sbin/tini", "--",\
+  "/bin/sh", "-c", \
+  "/entrypoint"\
+  ]
